<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewBatik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/batikhub"
        android:scaleType="centerCrop"
        android:contentDescription="@string/gambar_batik" />

    <TextView
        android:id="@+id/textViewMotifBatik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/motif_batik"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewAsalDaerah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/asal_daerah"
        android:textAlignment="center"
        android:textSize="14sp" />

</LinearLayout>

