<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_preview_photo"
        android:layout_width="361dp"
        android:layout_height="457dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/masukan_gambar"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="7dp" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:text="@string/camera"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#F0F2F5"
        app:layout_constraintEnd_toStartOf="@id/button_gallery"
        app:layout_constraintStart_toStartOf="@+id/img_preview_photo"
        app:layout_constraintTop_toBottomOf="@+id/img_preview_photo" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/galery"
        android:textAllCaps="false"
        android:backgroundTint="#F0F2F5"
        app:layout_constraintBottom_toBottomOf="@+id/button_camera"
        app:layout_constraintEnd_toEndOf="@+id/img_preview_photo"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toTopOf="@+id/button_camera" />

    <Button
        android:id="@+id/buttonPindai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/scan"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_200"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_gallery"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_camera"
        app:layout_constraintTop_toBottomOf="@+id/button_camera"
        app:layout_constraintVertical_bias="0.363" />

</androidx.constraintlayout.widget.ConstraintLayout>